[package]
name = "art"
version = "0.1.0"
authors = ["Tommy Morriss <thmorriss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mini_gl_fb = "0.7.0"
framebuffer = "0.1.8"
arrayvec = "0.4.1"
gl = "*"

[dependencies.rand]
version = "*"
features = ["small_rng"]

[profile.dev]
overflow-checks = false
